[gd_scene load_steps=2 format=3 uid="uid://c4lnx5nk8rfem"]

[ext_resource type="Script" path="res://scripts/button_answer.gd" id="1_i4ybw"]

[node name="button_answer" type="Button"]
custom_minimum_size = Vector2(250, 100)
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
script = ExtResource("1_i4ybw")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Paul"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
